[package]
name = "forge-database"
version = "0.1.0"
edition = "2024"

[dependencies]
forge-utils = { path = "../forge-utils" }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-uuid-1", "with-serde_json-1"] }
tokio = { version = "1.49.0", features = ["rt-multi-thread"] }
serde = { version = "1.0.228", features = ["rc"] }
serde_json = "1.0.149"
thiserror = "2.0.17"
chrono = "0.4.43"
uuid = "1.20.0"
